Minor scss and related fixes.
Resolves flickering when loading disappears (DOM hasn't caught up yet)
Resolves scrollbar displaying while loading initial routes in the background.

--- a/sass/scss/instance.modaldialog.scss
+++ b/sass/scss/instance.modaldialog.scss
@@ -25,7 +25,8 @@
         >.header {
             background:#eee;
             >h1 {
-               padding:.7em; 
+                margin:0;
+                padding:.7em; 
             }
         }
         >.message, >.action, >.custom {
