--- a/sass/scss/instance.pagemessage.scss
+++ b/sass/scss/instance.pagemessage.scss
@@ -53,7 +53,7 @@
         >a {
             background: inline-image("instance.pagemessage/close.svg") no-repeat 50% 50%;
             background-size:1.4em 1.4em;
-            width:2em;
+            width:2.4em;
             border-left:0.5em transparent solid;
             &:hover {
                 cursor:pointer;
