--- a/sass/scss/route.main.scss
+++ b/sass/scss/route.main.scss
@@ -108,7 +108,7 @@ body >.core-router >.main {
 
             >section {
 
-                &:nth-child(2) {
+                &:first-child {
                     background: inline-image("route.main/side.svg") no-repeat 95% 10%;
                     background-size:35%;
                     @media (max-width:1100px) {
